--- a/components/layout/layout.scss
+++ b/components/layout/layout.scss
@@ -165,7 +165,7 @@
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: clip;
 
     z-index: $index-content;
   }
